# Bittensor_Hackathon

./: .gitattributes  .gitignore  PLAN.md  README.md  RULES.md  plan_lingjing.md  plan_tina.md  pyproject.toml
.claude/: launch.json
.github/: CODEOWNERS
apps/api/: main.py
apps/api/static/: app.js  index.html  styles.css
data/samples/: bad_ambiguous_asset.json  fixture_report_bad.json  fixture_report_good.json  fixture_report_near_duplicate.json  good_document_asset.json  near_duplicate_asset.json
docs/: freshbench-implementation-guide.md  freshbench-proposal.md  hackathon-idea-references.md  official-resources.md  technical-stack.md
freshbench/: schemas.py
freshbench/storage/: json_store.py
freshbench/validator/: model_panel.py  novelty.py  pipeline.py  scoring.py
tests/: test_api.py  test_demo_samples.py  test_json_store.py  test_schemas.py  test_smoke.py  test_validator_pipeline.py
